--- a/dabang_clone/public/index.html
+++ b/dabang_clone/public/index.html
@@ -28,6 +28,7 @@
 
     <!-- 카카오 지도 api -->
     <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=2278501db03cc9b91e0a5d5345025fa2&libraries=services,clusterer,drawing"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     
 
 
